    - New: *Racket*:
      - New: Add preliminary support for the Racket programming language.
        - The user-option variable ``pel-use-racket`` activates it, using the
          *racket-mode* external package.
        - The PEL ``<f12>`` Lisp hot key is available in that mode, along with
          what is available to Emacs Lisp and Common Lisp, including *lispy*.
    - New: *Scheme*:
      - New: Add preliminary support for the Scheme programming language.
        - The user-option variable ``pel-use-scheme`` activates PEL extra
          support for Scheme.
          - The PEL ``<f12>`` Lisp hot key is available in that mode, along with
            what is available to Emacs Lisp and Common Lisp, including *lispy*.
  - Update: *Erlang*:
    - New: Add Speedbar support for Erlang, showing the functions in the .erl,
      .hrl and .escript files.
    - Modified: logic to select the syntax checker.  The new user option
      *pel-use-erlang-syntax-checker* replaces what was previously used:
      *pel-use-erlang-flymake* and *pel-use-erlang-flycheck*.  These last two
      are no longer supported.  The new user-option is used to select one of
      the 2 supported checkers.
    - The previously used ``<f12> F`` key sequence to toggle flymake is
      replaced by ``<f12> !`` which is bound to *pel-erlang-toggle-syntax-check*.
  - New: *Forth*:
    - New: [[https://raw.githubusercontent.com/pierre-rouleau/pel/master/doc/pdf/pl-forth][𝕻𝔩 - Forth]] PDF that describes the commands available for the Forth
      programming language.
    - New: the ``<f11> x f`` key sequences opens a Forth interpreter window.
  - New: *Go*:
    - New: Added support for the Go programming language when the *pel-use-go*
      user option is set to *t*.  It allows the following mode activation:
      - When the *pel-use-go-mode* user-option is set to *t*, editing a Go
        file activates the *go-mode* major mode.