@@ -531,12 +531,16 @@ PEL -- Pragmatic Environment Library --  NEWS         -*- org -*-
           *racket-mode* external package.
         - The PEL ``<f12>`` Lisp hot key is available in that mode, along with
           what is available to Emacs Lisp and Common Lisp, including *lispy*.
+        - It's ``<f12> <f2>`` key opens PEL racket customization buffer.
+        - It's ``<f12> <f3>`` key opens the racket-mode customization buffer.
     - New: *Scheme*:
       - New: Add preliminary support for the Scheme programming language.
         - The user-option variable ``pel-use-scheme`` activates PEL extra
           support for Scheme.
           - The PEL ``<f12>`` Lisp hot key is available in that mode, along with
             what is available to Emacs Lisp and Common Lisp, including *lispy*.
+        - It's ``<f12> <f2>`` key opens PEL scheme customization buffer.
+        - It's ``<f12> <f3>`` key opens the scheme customization buffer.
   - Update: *Erlang*:
     - New: Add Speedbar support for Erlang, showing the functions in the .erl,
       .hrl and .escript files.
